syntax = "proto3";

option java_package = "com.example.foo";
option java_multiple_files = true;
option java_outer_classname = "Ponycopter";

message MessageRequest {
   string name = 1;
   int32 n = 2;
}
           
message MessageReply {
   string name = 1;
   repeated int32 n = 2;
}
           
service GreetingService {
   rpc sayHello (MessageRequest) returns (MessageReply) {}
   rpc lotsOfReplies (MessageRequest) returns (stream MessageReply) {}
   rpc lotsOfGreetings (stream MessageReply) returns (MessageRequest) {}
   rpc bidiHello (stream MessageReply) returns (stream MessageRequest) {}
}
           
                        